[package]
name = "pds-migrate"
version = "0.1.0"
edition = "2021"

[dependencies]
atrium-api = { version = "0.25.0", default-features = false, features = ["agent", "bluesky"] }
atrium-common = "0.1.0"
atrium-identity = { version = "0.1.1", features = ["doh-handle-resolver"] }
atrium-xrpc-client = "0.5.11"
hickory-resolver = "0.25.1"
tokio = { version = "1.44.0", features = ["macros", "rt-multi-thread"]}
